# space-crab

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release-cli.yml  release-core.yml  release-crates.yml  simple-ci.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/src/: calculator.rs  formatter.rs  lib.rs  path_scanner.rs
src/: main.rs  path_scaner.rs
