[package]
name = "spacecrab"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the SpaceCrab scanner"
license = "MIT OR Apache-2.0"
repository = "https://github.com/serhii-pokrovskyi/space-crab"
keywords = ["cli", "scanner", "files"]
categories = ["command-line-utilities"]

[[bin]]
name = "spacecrab"
path = "src/main.rs"

[dependencies]
spacecrab-core = { package = "spacecrab-core", path = "../core" }