[package]
name = "spacecrab"
edition = "2024"
description = "Command-line interface for the SpaceCrab scanner"
keywords = ["cli", "scanner", "files"]
categories = ["command-line-utilities"]

[[bin]]
name = "spacecrab"
path = "src/main.rs"

[dependencies]
spacecrab-core = { package = "spacecrab-core", path = "../core" }