[package]
name = "spacecrab"
edition = "2024"
version.workspace = true
repository.workspace = true
license.workspace = true
description = "Command-line interface for the SpaceCrab scanner"
keywords = ["cli", "scanner", "files"]
categories = ["command-line-utilities"]

[[bin]]
name = "spacecrab"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.37", features = ["derive", "env"]}
spacecrab-core = "0.x"
